# databricks-skeletal-streamlit-app

./: .gitignore  Makefile  README.md  app.yaml  databricks.local.yml.sample  databricks.yml  main.py  pyproject.toml  skills-lock.json
.github/instructions/: local-environment.instructions.md  (+2 more)
app/: app.py  auth.py  db.py  requirements.txt  run.py  workflow.py
appkitapp/: .env.example  .gitignore  Makefile  README.md  databricks.local.yml.sample  databricks.yml  package-lock.json  package.json  tsconfig.client.json  tsconfig.server.json  tsconfig.shared.json
data/: generate_parquet.py  generate_silver.py
flaskapp/: .env.sample  .gitignore  Makefile  README.md  app.yaml  databricks.local.yml.sample  databricks.yml  package-lock.json  package.json  pyproject.toml
flaskapp/backend/: run.py
flaskapp/backend/flask_backend/: app.py  auth.py  db.py  static_serve.py
flaskapp/backend/flask_backend/routes/: __init__.py  dashboard.py  health.py
flaskapp/backend/tests/: test_routes.py
flaskapp/docs/: adr-001-frontend-versions.md
flaskapp/frontend/: .env.sample  index.html  tsconfig.json  vite.config.ts
flaskapp/frontend/src/: App.module.css  App.tsx  api.ts  main.css  main.tsx  types.ts
flaskapp/frontend/src/components/: Filters.module.css  Filters.tsx  KpiCards.module.css  KpiCards.tsx  Leaderboard.module.css  Leaderboard.tsx  MonthlyChart.module.css  MonthlyChart.tsx  RegionProductPivot.module.css  RegionProductPivot.tsx
flaskapp/meta/: app-resources.json.tpl
meta/: app-resources.json.tpl
sql/: 01_setup.sql  02_refresh_job.py  apply.py
(+5 files in other folders)
